<resources>
    <string name="app_name">Calculadora 1.0</string>
    <string name="btLimpar">CE</string>
    <string name="txtSaida">0</string>
     <string name="btResultado">=</string>
    <string name="btSubtracao">-</string>
    <string name="btMultiplicacao">*</string>
    <string name="btnRemoverUltimo">←</string>
    <string name="btSoma">+</string>
    <string name="btDivisao">÷</string>
    <string name="btPonto">.</string>
    <string name="bt0">0</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>

</resources>
